--- a/package.json
+++ b/package.json
@@ -64,7 +64,10 @@
     "typescript": "^2.4.2"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
+    "cancelable-awaiter": "^1.0.5",
     "chrome-launcher": "^0.10.0",
-    "chrome-remote-interface": "^0.25.0"
+    "chrome-remote-interface": "^0.25.0",
+    "tslib": "^1.9.0"
   }
 }
